# wagtail-notifications

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/home/: models.py
examples/: db.sqlite3  pyproject.toml
examples/example/settings/: base.py  constants.py  dev.py
pip-wheel-metadata/wagtail_notifications-0.1.0.dist-info/: METADATA
tests/: __init__.py  test_wagtail_notifications.py
wagtail_notifications/: __init__.py  models.py  signals.py  urls.py  views.py  wagtail_hooks.py
wagtail_notifications/templates/wagtail_notifications/: dashboard.html
