[tool.poetry]
name = "wagtail_notifications"
version = "0.1.0"
description = ""
authors = ["Fabien Le Frapper <contact@fabienlefrapper.me>"]

[tool.poetry.dependencies]
python = ">=3.6"
wagtail = "^2.9"
django = "^3.0.7"
django-notifications-hq = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
